src/test/deca/context/valid/created/method_asm_called.deca
//Description :
// Test d'une methode qui ne return pas forcement
//
// Resultats :
// Pas de soucis


class Premiere {

  void random(int x) asm ("WNL");

}



{
Premiere prem = new Premiere();
prem.random(3);
}
