src/test/deca/context/invalid/created/method_not_found.deca
//Description :
// Test d'une methode non def
//
// Resultats :
// Erreur


class Premiere {

}

{
Premiere prem = new Premiere();
prem.existepas();
}
